// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Navigation/MenuLink active 1`] = `
.emotion-0 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
  color: inherit;
  font-weight: bold;
  background-color: rgba(0,0,0,0.07);
  z-index: 0;
}

<a
  class="emotion-0 emotion-1"
  href="http://google.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Navigation/MenuLink default 1`] = `
.emotion-0 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
}

<a
  class="emotion-0 emotion-1"
  href="http://google.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Navigation/MenuLink with knobs 1`] = `
.emotion-0 {
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  line-height: 16px;
  padding: 1px 5px 4px;
  margin-left: 5px;
  position: relative;
  z-index: 1;
  color: inherit;
  font-weight: bold;
  background-color: rgba(0,0,0,0.07);
  z-index: 0;
}

<div
  style="width:90px"
>
  <a
    class="emotion-0 emotion-1"
    href="/"
  >
    Menu link item
  </a>
</div>
`;
